# aicontrol-oss

./: .env.example  .gitignore  .oss-exclude  Dockerfile  Dockerfile.dashboard  GETTING_STARTED.md  LICENSE  NOTICE  PROJECT_CONTEXT.md  README-OSS.md  README.md  diagnose.sh  docker-compose.app.yml  docker-compose.demo.yml  docker-compose.yml  install.sh  pytest.ini  requirements.txt  verify.sh
app/: main.py
dashboard/: app.py  queries.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
migrations/: env.py
policies/: base.rego  policies.yaml
scripts/: demo_reset.py  demo_run.py  demo_seed_synthetic.py  generate_keypair.py  issue_license.py  issue_token.py  list_agents.py  onboard_agent.py  provision_mcp_scanner_venv.sh  provision_skill_scanner_venv.sh  quickstart.sh  reset_password.py  revoke_agent.py  seed.py  seed_library_policies.py
sdk/: README.md  pyproject.toml
sdk/src/aicontrol_sdk/: __init__.py  config.py  decorator.py  exceptions.py  intercept_client.py  registration_client.py
sdk/src/aicontrol_sdk/adapters/: __init__.py  anthropic_agent_sdk.py  base.py  google_adk.py  openai_agents_sdk.py
sdk/tests/: conftest.py  test_adapters_anthropic.py  test_adapters_google_adk.py  test_adapters_openai.py  test_adapters_registry.py  test_config.py  test_decorator.py  test_exceptions.py  test_instrument.py  test_intercept_client.py  test_registration_client.py  test_report_response.py
tests/: conftest.py  test_activity_log.py  test_admission_scans_api.py  test_agents_api.py  test_agents_register.py  (+85 more)
(+208 files in other folders)
